fixed padding in navbar on mobile

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -257,6 +257,10 @@ main {
     font-weight: 700;
     font-size: 14px;
     padding-left: 20px;
+    @media screen and (max-width: $mobileW){
+			padding-left: 0px;
+			padding-right: 20px;
+		}
 }
 
 .en:lang(en), .fr:lang(fr){
